--- a/.editorconfig
+++ b/.editorconfig
@@ -23,12 +23,22 @@ resharper_blank_lines_before_multiline_statements = 0
 resharper_csharp_align_multiline_parameter = false
 resharper_csharp_max_line_length = 100
 resharper_csharp_wrap_multiple_type_parameter_constraints_style = chop_always
+resharper_html_alignment_tab_fill_style = optimal_fill
+resharper_html_attribute_style = on_single_line
+resharper_html_blank_line_after_pi = false
+resharper_html_max_blank_lines_between_tags = 1
+resharper_html_spaces_around_eq_in_attribute = false
+resharper_html_spaces_around_eq_in_pi_attribute = false
+resharper_html_use_indent_from_vs = true
 resharper_keep_existing_declaration_block_arrangement = false
 resharper_modifiers_order = private protected internal public virtual override static readonly abstract sealed extern unsafe volatile async new
+resharper_normalize_tag_names = true
 resharper_object_creation_when_type_evident = explicitly_typed
 resharper_parentheses_non_obvious_operations = none, shift, conditional_and, conditional_or, conditional
 resharper_parentheses_redundancy_style = remove_if_not_clarifies_precedence
 resharper_place_simple_initializer_on_single_line = true
+resharper_sort_attributes = true
+resharper_sort_class_selectors = true
 resharper_space_within_new_parentheses = false
 resharper_space_within_single_line_array_initializer_braces = true
 resharper_static_members_qualify_members = none, event
@@ -40,7 +50,10 @@ resharper_xmldoc_linebreak_before_elements = summary,remarks,example,returns,par
 resharper_xmldoc_max_line_length = 60
 resharper_xml_indent_child_elements = OneIndent
 resharper_xml_indent_text = OneIndent
-resharper_xml_max_blank_lines_between_tags = 0
+resharper_xml_linebreaks_inside_tags_for_multiline_elements = false
+resharper_xml_max_blank_lines_between_tags = 1
+resharper_xml_spaces_around_eq_in_pi_attribute = false
+resharper_xml_use_indent_from_vs = true
 
 # Microsoft .NET properties
 csharp_new_line_before_members_in_object_initializers = false
