--- a/.editorconfig
+++ b/.editorconfig
@@ -30,6 +30,8 @@ resharper_html_max_blank_lines_between_tags = 1
 resharper_html_spaces_around_eq_in_attribute = false
 resharper_html_spaces_around_eq_in_pi_attribute = false
 resharper_html_use_indent_from_vs = true
+resharper_js_wrap_before_binary_opsign = true
+resharper_js_wrap_chained_method_calls = wrap_if_long
 resharper_keep_existing_declaration_block_arrangement = false
 resharper_modifiers_order = private protected internal public virtual override static readonly abstract sealed extern unsafe volatile async new
 resharper_normalize_tag_names = true
