--- a/.editorconfig
+++ b/.editorconfig
@@ -27,10 +27,11 @@ resharper_csharp_wrap_multiple_type_parameter_constraints_style = chop_always
 resharper_html_alignment_tab_fill_style = optimal_fill
 resharper_html_attribute_style = on_single_line
 resharper_html_blank_line_after_pi = false
-resharper_html_max_blank_lines_between_tags = 1
+resharper_html_max_blank_lines_between_tags = 0
 resharper_html_spaces_around_eq_in_attribute = false
 resharper_html_spaces_around_eq_in_pi_attribute = false
 resharper_html_use_indent_from_vs = true
+resharper_js_use_indent_from_vs = true
 resharper_js_wrap_before_binary_opsign = true
 resharper_js_wrap_chained_method_calls = wrap_if_long
 resharper_keep_existing_declaration_block_arrangement = false
