--- a/BudgetWeb.csproj
+++ b/BudgetWeb.csproj
@@ -2,8 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <OutputType>Library</OutputType>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <AssemblyName>BudgetWeb</AssemblyName>
+    <RootNamespace>BudgetExecution</RootNamespace>
+    <ApplicationIcon>img\BudExNinjaGrey.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="img\BudExNinjaGrey.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
